NAS-116393: Fix small spacing

--- a/src/app/pages/storage2/components/pools-dashboard/widget-topology/widget-topology.component.scss
+++ b/src/app/pages/storage2/components/pools-dashboard/widget-topology/widget-topology.component.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.warning {
+  padding: 0 6px;
+}
+
 .vdev-line {
   display: flex;
   justify-content: space-between;
